2008-03-04  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimptransformtool.[ch]
	* app/tools/gimptransformoptions.[ch]
	* app/display/gimpdisplayshell-preview.c: apply patch
	from Tom Lechner (comment #35 in bug #167926) to allow
	tranlucency in transform tool previews, for testing.
	
2008-03-04  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell.[ch]
	(gimp_display_shell_set_initial_scale): Factor out code
	from gimp_display_shell_new.

	* app/display/gimpdisplay.c (gimp_display_reconnect):
	Scale things properly when opening an image in a 
	no-image-open display.
	
2008-03-04  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell.[ch]
	* app/display/gimpdisplay.c: factor out duplicated
	code for configuring display shell.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merge 24892:25025 from trunk.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimptoolbox.[ch]
	* app/widgets/gimptoolbox-dnd.c: fiddle around with
	layout of toolbox.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpmenudock.c: fix error in handling of
	multi-column docks.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimppropwidgets.c: set border width of
	expanding frames to 0.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimplayertreeview.c: change layout of
	options to improve usage of space.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpviewablebox.c: when moving the elements
	of a "viewable box" into a table, but the button into
	an hbox.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* themes/Default/gtkrc: tweak some style values to try to
	reduce wasted space.
	
2008-03-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimpbrushfactoryview.[ch]
	* app/widgets/gimpbrushselect.c: use scale control instead of
	scale entry for brush spacing.
	